feat(core): crear y estructurar nuevos proyectos en la solución
- Se creó 'StoreFlow.Compartidos.Core.csproj' con configuración para .NET 9.0.
- Se creó 'StoreFlow.Logistica.API.csproj' con configuración inicial y soporte para pruebas HTTP.
- Se creó 'StoreFlow.Orquestador.Worker.csproj' como servicio en segundo plano con soporte para secretos de usuario.
- Se actualizó la solución 'StoreFlow.sln' para incluir los nuevos proyectos.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ UI/package-lock.json
 /Backend/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios
 /Backend/StoreFlow.Usuarios/.vs/ProjectEvaluation
 /Backend/.vs/StoreFlow
+/Backend/.vs/ProjectEvaluation
