--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ JWT_SECRET=q9zM3u9Y5xUq4OEt5nq3P9+0uOaIxQeH+dE68Z8+WBA=
 CONNECTION_STRING_COMPRAS="Host=dbcompras;Port=5432;Username=postgres;Password=postgres;Database=compras"
 CONNECTION_STRING_VENTAS="Host=dbventas;Port=5432;Username=postgres;Password=postgres;Database=ventas"
 CONNECTION_STRING_INVENTARIOS="Host=dbinventarios;Port=5432;Username=postgres;Password=postgres;Database=inventarios"
+RABBITMQ_HOST="amqp://guest:guest@rabbitmq:5672"
+OTEL_ENDPOINT="http://aspire-dashboard:18889"
