--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,8 +17,8 @@ services:
 
   usuarios:
     build: 
-      context: Backend/StoreFlow.Usuarios
-      dockerfile: StoreFlow.Usuarios.API/Dockerfile 
+      context: Backend
+      dockerfile: StoreFlow.Usuarios/StoreFlow.Usuarios.API/Dockerfile 
     env_file:
       - .env
     ports:
@@ -141,3 +141,18 @@ services:
       - compras
       - ventas
       - inventarios
+
+  aspire-dashboard:
+    container_name: aspire-dashboard
+    image: mcr.microsoft.com/dotnet/aspire-dashboard
+    ports:
+      - "18888:18888"
+      - "4317:18889"
+    environment:
+      - ASPIRE_DASHBOARD_UNSECURED_ALLOW_ANONYMOUS=true
+    restart: unless-stopped
+
+  rabbitmq:
+    image: "rabbitmq:4-management"
+    ports:
+      - "15672:15672"
