--- a/Backend/StoreFlow.Logistica/StoreFlow.Logistica.API/Dockerfile
+++ b/Backend/StoreFlow.Logistica/StoreFlow.Logistica.API/Dockerfile
@@ -5,27 +5,26 @@ FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
 
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["StoreFlow.Ventas/StoreFlow.Ventas.API/StoreFlow.Ventas.API.csproj", "StoreFlow.Ventas/StoreFlow.Ventas.API/"]
+COPY ["StoreFlow.Logistica/StoreFlow.Logistica.API/StoreFlow.Logistica.API.csproj", "StoreFlow.Logistica/StoreFlow.Logistica.API/"]
 COPY ["StoreFlow.Compartido/StoreFlow.Compartidos.Core.csproj", "StoreFlow.Compartido/"]
-RUN dotnet restore "./StoreFlow.Ventas/StoreFlow.Ventas.API/StoreFlow.Ventas.API.csproj"
+RUN dotnet restore "./StoreFlow.Logistica/StoreFlow.Logistica.API/StoreFlow.Logistica.API.csproj"
 COPY . .
-WORKDIR "/src/StoreFlow.Ventas/StoreFlow.Ventas.API"
-RUN dotnet build "./StoreFlow.Ventas.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/StoreFlow.Logistica/StoreFlow.Logistica.API"
+RUN dotnet build "./StoreFlow.Logistica.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./StoreFlow.Ventas.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./StoreFlow.Logistica.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "StoreFlow.Ventas.API.dll"]
+ENTRYPOINT ["dotnet", "StoreFlow.Logistica.API.dll"]
