--- a/Backend/StoreFlow.Logistica/StoreFlow.Logistica.API/StoreFlow.Logistica.API.csproj
+++ b/Backend/StoreFlow.Logistica/StoreFlow.Logistica.API/StoreFlow.Logistica.API.csproj
@@ -4,6 +4,16 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\StoreFlow.Compartido\StoreFlow.Compartidos.Core.csproj" />
+  </ItemGroup>
 
 </Project>
