--- a/Backend/StoreFlow.Ventas/StoreFlow.Ventas.API/StoreFlow.Ventas.API.csproj
+++ b/Backend/StoreFlow.Ventas/StoreFlow.Ventas.API/StoreFlow.Ventas.API.csproj
@@ -5,6 +5,8 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <UserSecretsId>19948db9-9291-444f-97f4-21d9ed19bb3c</UserSecretsId>
+        <DockerfileContext>..\..</DockerfileContext>
     </PropertyGroup>
 
     <ItemGroup>
@@ -22,12 +24,6 @@
         <PackageReference Include="MiniValidation" Version="0.9.2" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Content Include="..\..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
     </ItemGroup>
 
     <ItemGroup>
