--- a/Backend/StoreFlow.Inventarios/StoreFlow.Inventarios.API/StoreFlow.Inventarios.API.csproj
+++ b/Backend/StoreFlow.Inventarios/StoreFlow.Inventarios.API/StoreFlow.Inventarios.API.csproj
@@ -5,6 +5,8 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <UserSecretsId>8fe83b93-911f-4dab-98cf-72acb68552a4</UserSecretsId>
+        <DockerfileContext>..\..</DockerfileContext>
     </PropertyGroup>
 
     <ItemGroup>
@@ -24,9 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="..\..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+      <ProjectReference Include="..\..\StoreFlow.Compartido\StoreFlow.Compartidos.Core.csproj" />
     </ItemGroup>
 
 </Project>
