refactor(build): actualizar Dockerfile y referencias de proyecto
- Modificado el 'Dockerfile' para cambiar el contexto de construcción y las rutas, exponiendo el puerto 8080.
- Actualizado 'Program.cs' para refactorizar el manejo de variables de entorno y la configuración de autenticación.
- Agregada una referencia de proyecto a 'StoreFlow.Compartido' en 'StoreFlow.Compras.API.csproj'.
- Ajustado 'docker-compose.yaml' para corregir el contexto de construcción del servicio 'compras'.

--- a/Backend/StoreFlow.Compras/StoreFlow.Compras.API/StoreFlow.Compras.API.csproj
+++ b/Backend/StoreFlow.Compras/StoreFlow.Compras.API/StoreFlow.Compras.API.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +26,10 @@
 
   <ItemGroup>
     <Folder Include="Errores\Fabricantes\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\StoreFlow.Compartido\StoreFlow.Compartidos.Core.csproj" />
   </ItemGroup>
 
 </Project>
