--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,8 +45,8 @@ services:
 
   compras:
     build: 
-      context: Backend/StoreFlow.Compras
-      dockerfile: StoreFlow.Compras.API/Dockerfile 
+      context: Backend
+      dockerfile: StoreFlow.Compras/StoreFlow.Compras.API/Dockerfile 
     env_file:
       - .env
     ports:
