feat(worker): refactorizar procesamiento de órdenes y configuración de logs
- Hecho público 'ConfigurarOpenTelemetry' y agregado el parámetro 'openTelemetryEndpoint' en 'ConfiguracionesExtensiones.cs'.
- Actualizado 'Program.cs' para incluir 'MassTransit' y 'Serilog', configurar el logging y establecer una máquina de estados de saga con RabbitMQ.
- Agregadas nuevas referencias de paquetes en 'StoreFlow.Orquestador.Worker.csproj'.
- Eliminado 'Worker.cs' para simplificar la implementación del worker.
- Introducidos nuevos tipos de record para mensajes de órdenes en múltiples archivos.
- Agregado 'CreacionPedidoMachineState.cs' para la gestión del estado de creación de pedidos.
- Creado 'CreacionPedidoState.cs' para definir las propiedades del estado de la saga.

--- a/Backend/StoreFlow.Orquestador/StoreFlow.Orquestador.Worker/StoreFlow.Orquestador.Worker.csproj
+++ b/Backend/StoreFlow.Orquestador/StoreFlow.Orquestador.Worker/StoreFlow.Orquestador.Worker.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit.Redis" Version="8.4.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\StoreFlow.Compartido\StoreFlow.Compartidos.Core.csproj" />
   </ItemGroup>
 </Project>
