feat(orquestador): configurar servicios de mensajería, endpoints y soporte Docker
- Actualizado el archivo '.env' para cambiar el secreto JWT y modificar varias cadenas de conexión a bases de datos.
- Mantenida la configuración del host de RabbitMQ y actualizado el endpoint de OpenTelemetry.
- Agregada la URL de Redis.
- Actualizado 'launchSettings.json' para incluir un nuevo perfil Docker y ajustar variables de entorno.
- Añadidas propiedades de soporte Docker y una nueva referencia de paquete en 'StoreFlow.Orquestador.Worker.csproj'.
- Mejorado 'PedidosEndPoints.cs' para incluir un endpoint de publicación de creación de pedidos usando MassTransit.
- Modificado 'Program.cs' para mapear el nuevo endpoint y eliminar la redirección HTTPS.
- Actualizado 'nginx.conf' para corregir el servidor upstream de la API de inventarios.
- Modificado 'docker-compose.yaml' para agregar un nuevo servicio de orquestador con dependencias en RabbitMQ y Redis.
- Agregados 'ConsumidorValidarInventario.cs' y 'ConsumidorPreperarEnvioPedido.cs' para validación de inventario y preparación de envío de pedidos usando MassTransit.
- Creado un nuevo 'Dockerfile' para el servicio de orquestador con builds en múltiples etapas.
- Introducido 'ConsumidorConfirmarPedido.cs' para implementar el registro de confirmación de pedidos.

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ CONNECTION_STRING_INVENTARIOS="Host=dbinventarios;Port=5432;Username=postgres;Pa
 CONNECTION_STRING_LOGISTICA="Host=dblogistica;Port=5432;Username=postgres;Password=postgres;Database=dblogistica"
 RABBITMQ_HOST="amqp://guest:guest@rabbitmq:5672"
 OTEL_ENDPOINT="http://aspire-dashboard:18889"
+REDIS_URL="redis-stack"
