--- a/Gateway/nginx.conf
+++ b/Gateway/nginx.conf
@@ -24,7 +24,7 @@ http {
     }
 
     upstream inventarios_api {
-        server ventas:8080;
+        server inventarios:8080;
     }
 
     server {
