--- a/Backend/StoreFlow.Orquestador/StoreFlow.Orquestador.Worker/StoreFlow.Orquestador.Worker.csproj
+++ b/Backend/StoreFlow.Orquestador/StoreFlow.Orquestador.Worker/StoreFlow.Orquestador.Worker.csproj
@@ -5,11 +5,14 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-StoreFlow.Orquestador.Worker-8eda67b4-de41-4a89-bc95-85d78fbb3eaf</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MassTransit.Redis" Version="8.4.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
   <ItemGroup>
