--- a/Backend/StoreFlow.Ventas/StoreFlow.Ventas.API/StoreFlow.Ventas.API.csproj
+++ b/Backend/StoreFlow.Ventas/StoreFlow.Ventas.API/StoreFlow.Ventas.API.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="MiniValidation" Version="0.9.2" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
+        <PackageReference Include="NSubstitute" Version="5.3.0" />
     </ItemGroup>
 
     <ItemGroup>
