Feature/creacion orquestador logistica infraestructura (#53)
* feat(core): crear y estructurar nuevos proyectos en la solución

- Se creó 'StoreFlow.Compartidos.Core.csproj' con configuración para .NET 9.0.
- Se creó 'StoreFlow.Logistica.API.csproj' con configuración inicial y soporte para pruebas HTTP.
- Se creó 'StoreFlow.Orquestador.Worker.csproj' como servicio en segundo plano con soporte para secretos de usuario.
- Se actualizó la solución 'StoreFlow.sln' para incluir los nuevos proyectos.

* refactor(auth): eliminar Class1 y mejorar la configuración de autenticación

- Se eliminó la clase no utilizada 'Class1' de 'Class1.cs'.
- Se actualizó 'StoreFlow.Compartidos.Core.csproj' para incluir nuevas referencias a los paquetes 'Microsoft.AspNetCore.Authentication.JwtBearer' y 'Microsoft.Extensions.DependencyInjection.Abstractions' (versión '9.0.4').
- Se refactorizó 'Program.cs' para usar 'EnvironmentUtilidades.ObtenerVariableEntornoRequerida' al obtener la cadena de conexión y se movió la configuración de autenticación a un nuevo método 'ConfigurarAutenticacion'.
- Se actualizó el pipeline de solicitudes HTTP para asegurar que 'app.UseAuthentication()' se invoque antes de 'app.UseAuthorization()'.
- Se modificó la estructura de la clase 'Program' para una mejor organización.
- Se actualizó 'StoreFlow.Usuarios.API.csproj' para eliminar referencias de paquetes obsoletas y se agregó una referencia al proyecto 'StoreFlow.Compartidos.Core'.
- Se actualizaron las dependencias del proyecto de pruebas en 'StoreFlow.Usuarios.Tests.csproj' a la versión '9.0.4'.
- Se añadieron 'ConfiguracionesExtensiones' para la configuración de autenticación JWT y 'EnvironmentUtilidades' para la obtención de variables de entorno.

* feat(infrastructure): actualizar env y configurar observabilidad

Actualizado el archivo '.env' para incluir variables de RabbitMQ y OpenTelemetry.
Mejorado 'ConfiguracionesExtensiones.cs' con métodos para la configuración de MassTransit y OpenTelemetry.
Agrega

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ JWT_SECRET=q9zM3u9Y5xUq4OEt5nq3P9+0uOaIxQeH+dE68Z8+WBA=
 CONNECTION_STRING_COMPRAS="Host=dbcompras;Port=5432;Username=postgres;Password=postgres;Database=compras"
 CONNECTION_STRING_VENTAS="Host=dbventas;Port=5432;Username=postgres;Password=postgres;Database=ventas"
 CONNECTION_STRING_INVENTARIOS="Host=dbinventarios;Port=5432;Username=postgres;Password=postgres;Database=inventarios"
+CONNECTION_STRING_LOGISTICA="Host=dblogistica;Port=5432;Username=postgres;Password=postgres;Database=dblogistica"
+RABBITMQ_HOST="amqp://guest:guest@rabbitmq:5672"
+OTEL_ENDPOINT="http://aspire-dashboard:18889"
+REDIS_URL="redis-stack"
