feat(kubernetes): optimizar la gestión de despliegues y configuraciones en storeflow
- Se integraron comandos de 'kubectl' en scripts de PowerShell para automatizar la gestión de Pods, Deployments, Services, Ingress, PVCs y Secrets en el namespace 'storeflow', mejorando la eficiencia operativa.
- Se añadieron variables de entorno como 'RABBITMQ_HOST' y 'OTEL_ENDPOINT' en los YAML de despliegue para habilitar nuevas integraciones de mensajería y monitoreo.
- Se crearon despliegues y servicios para 'aspire-dashboard', 'rabbitmq', 'redis-stack' y 'logistica' con el fin de ampliar las capacidades de observabilidad, mensajería y almacenamiento en la plataforma.
- Se actualizó 'shared-app-secret.yaml' para centralizar las credenciales y configuraciones necesarias para los nuevos servicios.
- Se eliminó 'deploy.sh' y se crearon los scripts '00-limpiar-storeflow.ps1', '01-infraestructura.ps1', '02-servicios.ps1' y '03-ingress.ps1' para modularizar y mejorar el proceso de despliegue.
- Se ajustaron 'deployment.yaml' y 'service.yaml' para asegurar compatibilidad con las nuevas variables de entorno y mejorar la mantenibilidad de las configuraciones.

--- a/k8s/compras/deployment.yaml
+++ b/k8s/compras/deployment.yaml
@@ -29,3 +29,13 @@ spec:
                 secretKeyRef:
                   name: app-secrets
                   key: JWT_SECRET
+            - name: RABBITMQ_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: RABBITMQ_HOST
+            - name: OTEL_ENDPOINT
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: OTEL_ENDPOINT
