--- a/k8s/infraestructura/rabbitmq/rabbitmq-service-internal.yaml
+++ b/k8s/infraestructura/rabbitmq/rabbitmq-service-internal.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: inventarios
+  name: rabbitmq-internal
   namespace: storeflow
 spec:
   type: ClusterIP
   selector:
-    app: inventarios
+    app: rabbitmq
   ports:
-    - port: 8080
-      targetPort: 8080
+    - port: 5672
+      targetPort: 5672
+      name: amqp
