--- a/k8s/infraestructura/redis/redis-stack-service-internal.yaml
+++ b/k8s/infraestructura/redis/redis-stack-service-internal.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: inventarios
+  name: redis-stack-internal
   namespace: storeflow
 spec:
   type: ClusterIP
   selector:
-    app: inventarios
+    app: redis-stack
   ports:
-    - port: 8080
-      targetPort: 8080
+    - port: 6379
+      targetPort: 6379
+      name: redis
