--- a/k8s/logistica/service-logistica.yaml
+++ b/k8s/logistica/service-logistica.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: inventarios
+  name: logistica
   namespace: storeflow
 spec:
   type: ClusterIP
   selector:
-    app: inventarios
+    app: logistica
   ports:
     - port: 8080
       targetPort: 8080
