--- a/k8s/postgres/logisticadb/service-dblogistica.yaml
+++ b/k8s/postgres/logisticadb/service-dblogistica.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: inventarios
+  name: dblogistica
   namespace: storeflow
 spec:
   type: ClusterIP
   selector:
-    app: inventarios
+    app: dblogistica
   ports:
-    - port: 8080
-      targetPort: 8080
+    - port: 5432
+      targetPort: 5432
