--- a/k8s/secrets/shared-app-secret.yaml
+++ b/k8s/secrets/shared-app-secret.yaml
@@ -6,7 +6,11 @@ metadata:
 type: Opaque
 stringData:
   CONNECTION_STRING: Host=dbusuarios;Port=5432;Username=postgres;Password=postgres;Database=usuarios
-  CONNECTION_STRING_COMPRAS: Host=dbcompras;Port=5432;Username=postgres;Password=postgres;Database=dbcompras
-  CONNECTION_STRING_VENTAS: Host=dbventas;Port=5432;Username=postgres;Password=postgres;Database=dbventas
-  CONNECTION_STRING_INVENTARIOS: Host=dbinventarios;Port=5432;Username=postgres;Password=postgres;Database=dbinventarios
+  CONNECTION_STRING_COMPRAS: Host=dbcompras;Port=5432;Username=postgres;Password=postgres;Database=compras
+  CONNECTION_STRING_VENTAS: Host=dbventas;Port=5432;Username=postgres;Password=postgres;Database=ventas
+  CONNECTION_STRING_INVENTARIOS: Host=dbinventarios;Port=5432;Username=postgres;Password=postgres;Database=inventarios
+  CONNECTION_STRING_LOGISTICA: Host=dblogistica;Port=5432;Username=postgres;Password=postgres;Database=logistica
   JWT_SECRET: q9zM3u9Y5xUq4OEt5nq3P9+0uOaIxQeH+dE68Z8+WBA=
+  RABBITMQ_HOST: amqp://guest:guest@rabbitmq-internal:5672
+  OTEL_ENDPOINT: http://aspire-dashboard-internal:18889
+  REDIS_URL: redis-stack-internal:6379
