--- a/k8s/usuarios/deployment.yaml
+++ b/k8s/usuarios/deployment.yaml
@@ -29,3 +29,13 @@ spec:
                 secretKeyRef:
                   name: app-secrets
                   key: JWT_SECRET
+            - name: RABBITMQ_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: RABBITMQ_HOST
+            - name: OTEL_ENDPOINT
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: OTEL_ENDPOINT
