Registro de plan de ventas simplificado

--- a/Backend/StoreFlow.Logistica/StoreFlow.Logistica.API/StoreFlow.Logistica.API.csproj
+++ b/Backend/StoreFlow.Logistica/StoreFlow.Logistica.API/StoreFlow.Logistica.API.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\..\StoreFlow.Compartido\StoreFlow.Compartidos.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Consumidores\" />
+  </ItemGroup>
+
 </Project>
