Feature: Add VisitaResponse DTO and endpoint for retrieving visits

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ CONNECTION_STRING_LOGISTICA="Host=dblogistica;Port=5432;Username=postgres;Passwo
 RABBITMQ_HOST="amqp://guest:guest@rabbitmq:5672"
 OTEL_ENDPOINT="http://aspire-dashboard:18889"
 REDIS_URL="redis-stack"
+AZURE_STORAGE_CONNECTION_STRING="DefaultEndpointsProtocol=https;AccountName=pocstoreflow;AccountKey=xxxx;EndpointSuffix=core.windows.net"
