Feature: Add Azure Storage connection string to shared app secrets

--- a/k8s/secrets/shared-app-secret.yaml
+++ b/k8s/secrets/shared-app-secret.yaml
@@ -14,3 +14,4 @@ stringData:
   RABBITMQ_HOST: amqp://guest:guest@rabbitmq-internal:5672
   OTEL_ENDPOINT: http://aspire-dashboard-internal:18889
   REDIS_URL: redis-stack-internal:6379
+  AZURE_STORAGE_CONNECTION_STRING: DefaultEndpointsProtocol=https;AccountName=pocstoreflow;AccountKey=xxxx;EndpointSuffix=core.windows.net
