--- a/Backend/StoreFlow.Logistica/StoreFlow.Logistica.API/StoreFlow.Logistica.API.csproj
+++ b/Backend/StoreFlow.Logistica/StoreFlow.Logistica.API/StoreFlow.Logistica.API.csproj
@@ -9,15 +9,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\StoreFlow.Compartido\StoreFlow.Compartidos.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Consumidores\" />
   </ItemGroup>
 
 </Project>
