Corrección de rutas y cors de logistica

--- a/Gateway/nginx.conf
+++ b/Gateway/nginx.conf
@@ -27,6 +27,10 @@ http {
     upstream inventarios_api {
         server inventarios:8080;
     }
+    
+    upstream logistica_api {
+        server logistica:8080;
+    }
 
     server {
         listen 80;
@@ -55,6 +59,13 @@ http {
         location /api/inventarios/ {
             proxy_pass http://inventarios_api/;
             rewrite ^/api/inventarios/(.*)$ /$1 break;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+        
+        location /api/logistica/ {
+            proxy_pass http://logistica_api/;
+            rewrite ^/api/logistica/(.*)$ /$1 break;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
